Speed up isCompiledBy and getCompileSections